tests/fixtures/errors/invalid_chronology_unsupported_baseline.puml
@startchronology
Milestone starts 2026-05-01
@endchronology
